# StayOnTheBeat

./: .gitignore  README.md
data/: index.html  woodblock_low_tick16khz_16bits_stereo.txt
metronome-core/: .gitignore  CMakeLists.txt  Makefile  README.md  m_ptable.csv  metronome_partitions.csv  questions  sdkconfig  sdkconfig.defaults
metronome-core/components/m_beat/: CMakeLists.txt  audio_file.h  m_beat.c  m_beat.h
metronome-core/components/m_http_server/: CMakeLists.txt  m_http_server.c  m_http_server.h
metronome-core/components/m_init/: CMakeLists.txt  fs_init.c  wifi_ap_init.c
metronome-core/init/: CMakeLists.txt  fs_init.c  wifi_ap_init.c
metronome-core/main/: CMakeLists.txt  Kconfig.projbuild  http_server.c  init.h  metronome_main.c  services_init.c  services_init.h  wifi_ap.c  wifi_ap.h  wifi_ap_init.c
metronome-core/server/: CMakeLists.txt  esp_rest_main.c  rest_server.c  rest_server.h
metronome-core/wifi_ap/: wifi_ap.c  wifi_ap.h
